# Evaluation_Project_Fastapi

./: .env  .gitignore  main.py  pyproject.toml
config/: database.py
controllers/: auth_controller.py  product_controller.py  user_controller.py
dtos/: auth_models.py  base_response_model.py  product_models.py  user_models.py
helpers/: api_helper.py  cors_helper.py  db_helper.py  email_helper.py  token_helper.py  validations.py
liquibase/changelog/: changelog.xml  liquibase.properties
models/: product_table.py  user_table.py
routes/: __init__.py  auth.py  product.py  user.py
templates/: forgot_password.html  signup.html  verification.html
utils/: hashing.py
