[tool.poetry]
name = "evaluation-project"
version = "0.1.0"
description = ""
authors = ["Vansh <vansh.malhotra@seaflux.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
