[tool.poetry]
name = "evaluation-project"
version = "0.1.0"
description = ""
authors = ["Vansh <vansh.malhotra@seaflux.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
sqlalchemy = "^2.0.28"
pymysql = "^1.1.0"
mysql-connector-python = "^8.3.0"
bcrypt = "^4.1.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
jwt = "^1.3.1"
pyjwt = "^2.8.0"
fastapi-mail = "^1.4.1"
i18n = "^0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
